fix : remove compounding projection if it is just simply without asset being tied into